move repositories into separate subdirs, remove leftover /label endpoint, regenerate swagger docs, update readme
