# backend/pkg/repository/pop/models/label.go
@@ -1,55 +1,0 @@
-package models
-
-import (
-	"encoding/json"
-	"time"
-
-	"github.com/gobuffalo/pop/v6"
-	"github.com/gobuffalo/validate"
-	"github.com/gofrs/uuid"
-)
-
-// Label is used by pop to map your .model.Name.Proper.Pluralize.Underscore database table to your go code.
-type Label struct {
-	ID        uuid.UUID `json:"id" db:"id"`
-	CreatedAt time.Time `json:"created_at" db:"created_at"`
-	UpdatedAt time.Time `json:"updated_at" db:"updated_at"`
-
-	Title string `json:"title" db:"title"`
-	Color string `json:"color" db:"color"`
-
-	Articles Articles `json:"articles" has_many:"articles"`
-}
-
-// String is not required by pop and may be deleted
-func (l Label) String() string {
-	jl, _ := json.Marshal(l)
-	return string(jl)
-}
-
-// Labels is not required by pop and may be deleted
-type Labels []Label
-
-// String is not required by pop and may be deleted
-func (l Labels) String() string {
-	jl, _ := json.Marshal(l)
-	return string(jl)
-}
-
-// Validate gets run every time you call a "pop.Validate*" (pop.ValidateAndSave, pop.ValidateAndCreate, pop.ValidateAndUpdate) method.
-// This method is not required and may be deleted.
-func (l *Label) Validate(tx *pop.Connection) (*validate.Errors, error) {
-	return validate.NewErrors(), nil
-}
-
-// ValidateCreate gets run every time you call "pop.ValidateAndCreate" method.
-// This method is not required and may be deleted.
-func (l *Label) ValidateCreate(tx *pop.Connection) (*validate.Errors, error) {
-	return validate.NewErrors(), nil
-}
-
-// ValidateUpdate gets run every time you call "pop.ValidateAndUpdate" method.
-// This method is not required and may be deleted.
-func (l *Label) ValidateUpdate(tx *pop.Connection) (*validate.Errors, error) {
-	return validate.NewErrors(), nil
-}
